system/services/auth/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
spec:
  chain:
    middlewares:
    - name: https-only
    - name: traefik-forward-auth
