system/services/auth/deployment.yaml
#
# Traefik Forward Auth Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: ghcr.io/jordemort/traefik-forward-auth:latest
        name: traefik-forward-auth
        ports:
        - containerPort: 4181
          protocol: TCP
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
      #   volumeMounts:
      #   - name: configs
      #     mountPath: /config
      #     subPath: traefik-forward-auth.ini
      # volumes:
      # - name: configs
      #   configMap:
      #     name: configs
