system/services/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
  - name: http
    port: 4181
    protocol: TCP
    targetPort: http
