system/services/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: secure-auth@kubernetescrd
spec:
  tls:
  - secretName: auth-tls
    hosts:
    - auth.poshcode.com
  rules:
  - host: auth.poshcode.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: traefik-forward-auth
            port:
              name: http
